--- a/pdf-pug/layouts/file.pug
+++ b/pdf-pug/layouts/file.pug
@@ -9,7 +9,7 @@ html(lang="es")
     title= title
 
     link(rel="stylesheet", href="./style.css")
-    link(rel="stylesheet", href="../global.css")
+    link(rel="stylesheet", href="./global.css")
     block styles
   body
     block content
