### Actualización de estilo y ajuste de diseño
#### docs/cpa/index.html
- Se añadió una clase `cpa-theme` al elemento `<body>` para aplicar un tema específico a la página CPA.

#### risk-pug/pages/ingresos-vigentes.pug
- Se modificó el estilo del elemento `#conciliacion-mes` para establecer un `max-width:100%`, asegurando que el contenido no exceda el ancho disponible y se adapte mejor al diseño responsivo.

--- a/risk-pug/pages/ingresos-vigentes.pug
+++ b/risk-pug/pages/ingresos-vigentes.pug
@@ -112,7 +112,7 @@ block content
         .col.col-12.col-md-12.col-xl-6.col-xxl-8.border-start.z-1
           .ps-4
             h3.text-primary.mb-4.text-uppercase.py-2 Integración de CFDI's Conciliados <span id="mes-seleccionado">Enero</span>
-            #conciliacion-mes.w-100
+            #conciliacion-mes(style="max-width:100%")
 append footerPage
   script(src='/assets/js/globals.js')
   script(src='/assets/js/ingresos-vigentes.js')
